--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "animate.css": "^4.1.1",
     "next": "13.0.1",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.2",
+    "react-on-screen": "^2.1.1",
     "typescript": "4.8.4"
   },
   "devDependencies": {
