--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-on-screen": "^2.1.1",
+    "swiper": "^8.4.6",
     "typescript": "4.8.4"
   },
   "devDependencies": {
