--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "animate.css": "^4.1.1",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "next": "13.0.1",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
